--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "mui-tel-input": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-system": "^8.1.9",
     "react-hook-form": "^7.45.2",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "web-vitals": "^2.1.4"
