--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "mui-tel-input": "^3.2.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
+    "react-datetime-picker": "^5.2.2",
     "react-dom": "^18.2.0",
     "react-grid-system": "^8.1.9",
     "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
     "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
