--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material/checkbox": "^14.0.0",
+    "@material/radio": "^14.0.0",
     "@mui/material": "^5.14.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,7 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-input-mask": "^2.0.4",
+    "react-radio-group": "^3.0.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "web-vitals": "^2.1.4"
